entire html page is worked as a app

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp" ng-controller="myCntrl">
 
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,7 @@
 
 </head>
 
-<body class="bg-dark" ng-app="myApp" ng-controller="myCntrl">
+<body class="bg-dark">
     <div class="container col-9 main-div px-md-4 px-2 py-3">
 
         <div class="container row mx-auto d-flex justify-content-center head-div">
