--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- custom -->
     <link rel="stylesheet" href="./CSS/style.css">
     <script src="./JS/script.js"></script>
-
+    <title>{{page_title}}</title>
 
 </head>
 
